[package]
name = "git-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
load-dotenv = "0.1.2"
reqwest = "0.11.14"
rocket = "0.5.0-rc.2"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"
